<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory
        android:paddingLeft="2dp"
        android:textColor="#00838F"
        android:title="@string/account_settings_title">


        <EditTextPreference
            android:key="@string/preferences_url_key"
            android:summary="@string/preferences_url_summary"
            android:title="@string/preferences_url_title"></EditTextPreference>
        <EditTextPreference
            android:key="@string/preferences_login_name_key"
            android:summary="@string/preferences_login_name_summary"
            android:title="@string/preferences_login_name_title"></EditTextPreference>

        <EditTextPreference
            android:inputType="textPassword"
            android:key="@string/preferences_password_key"
            android:summary="@string/preferences_password_summary"
            android:title="@string/preferences_password_title"></EditTextPreference>
    </PreferenceCategory>
    <PreferenceCategory
        android:textColor="#00838F"
        android:title="@string/ui_settings_title">


        <ListPreference
            android:defaultValue="white"
            android:entries="@array/color_names"
            android:entryValues="@array/color_values"
            android:key="@string/preference_main_bg_key"
            android:summary="@string/preference_main_bg_summary"
            android:title="@string/preference_main_bg_title"></ListPreference>
        <EditTextPreference
            android:inputType="textPassword"
            android:key="@string/preferences_font_size_key"
            android:summary="@string/preferences_font_size_summary"
            android:title="@string/preferences_font_size_title"></EditTextPreference>
    </PreferenceCategory>
</PreferenceScreen>